--- a/public/index.html
+++ b/public/index.html
@@ -1,36 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <!-- Google Tag Manager -->
-  <script>(function (w, d, s, l, i) {
-      w[l] = w[l] || []; w[l].push({
-        'gtm.start':
-          new Date().getTime(), event: 'gtm.js'
-      }); var f = d.getElementsByTagName(s)[0],
-        j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
-          'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
-    })(window, document, 'script', 'dataLayer', 'GTM-NJSWZX5');</script>
-  <!-- End Google Tag Manager -->
-
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" type="image/svg+xml" /> <!-- browser theme aware favicon -->
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5, minimum-scale=1" />
-  <meta name="description"
-    content="Meta Bitcoin (BTCZ) The Next Generation Crypto Providing a Cross-chain Trust Standard in the Metaverse" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.ico" />
-
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" crossorigin="use-credentials" />
-  <title>BTC-Z</title>
-
-  <link rel="preconnect" href="https://api.thegraph.com" crossOrigin="anonymous" />
+  <title>Cerberus</title>
 </head>
-
 <body>
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <!-- fallback, if on head browsers will prefer the .ico over .svg -->
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
 </body>
-
 </html>
