--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" type="image/svg+xml" /> <!-- browser theme aware favicon -->
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5, minimum-scale=1" />
+  <meta name="viewport" content="width=device-width,initial-scale=1.0, user-scalable=no,minimum-scale=1.0,maximum-scale=1.0, minimal-ui,viewport-fit=contain">
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.ico" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" crossorigin="use-credentials" />
   <title>Cerberus</title>
